--- a/src/main/resources/fr/chess/saechess/hello-view.fxml
+++ b/src/main/resources/fr/chess/saechess/hello-view.fxml
@@ -252,13 +252,13 @@
   <!-- Création partie droite de page accueil -->
   <VBox alignment="TOP_CENTER">
       <HBox>
-          <Label text="Nouvelle partie" textFill="WHITE" />
-          <Label text="Parties" textFill="WHITE">
+          <Button fx:id="page1" text="Nouvelle partie" textFill="WHITE" prefWidth="200.0" style="-fx-background-color: transparent"/>
+          <Button fx:id="page2" text="Parties" textFill="WHITE" prefWidth="150.0" style="-fx-background-color: transparent">
             <HBox.margin>
                <Insets left="20.0" right="20.0" />
             </HBox.margin>
-          </Label>
-          <Label text="Joueurs" textFill="WHITE" />
+          </Button>
+          <Button fx:id="page3" text="Joueurs" textFill="WHITE"  prefWidth="150.0" style="-fx-background-color: transparent"/>
          <VBox.margin>
             <Insets bottom="30.0" />
          </VBox.margin>
@@ -308,7 +308,7 @@
           </VBox.margin>
       </Button>
 
-      <Button onAction="#TimeResume" alignment="TOP_CENTER" contentDisplay="TOP" prefWidth="112.0" style="-fx-background-color: #80b54c" text="Reprise" textAlignment="CENTER" textFill="WHITE">
+      <Button onAction="#TimeResume" alignment="TOP_CENTER" contentDisplay="TOP" prefWidth="152.0" style="-fx-background-color: #80b54c" text="Reprise" textAlignment="CENTER" textFill="WHITE">
           <font>
               <Font name="Arimo Bold" size="26.0" />
           </font>
